<resources>
    <string name="app_name">Celuvans</string>
    <string name="_16">16</string>
    <string name="aceptar">Aceptar</string>
    <string name="action_settings">Ajustes</string>
    <string name="addaddress">address/create</string>
    <string name="address">Dirección</string>
    <string name="google_api_key">AIzaSyBH2EK1sn58xOTzJZZMFcx37je7OYK8y7M</string>
    <string name="agend">schedule/create</string>
    <string name="driver_arrived_message">Ya llego tu conductor. Gracias por utilizar TaxisYa</string>
    <string name="agradecimiento_uso_taxisya">Gracias por utilizar TaxisYa, lo invitamos a calificar nuestro servicio</string>
    <string name="app_versions">app/versions</string>
    <string name="aviso_cancelacion_servicio_por_conductor">Servicio cancelado por conductor</string>
    <string name="aviso_no_puedes_agendar_antes_24_horas">No puedes realizar agendaminetos despues de 24 horas</string>
    <string name="aviso_momento_agendamiento_pasado">La hora de agendamiento indicada ya ha pasado</string>
    <string name="aviso_puedes_realizar_agendamiento_una_hora">Puedes realizar agendaminetos minimo una hora antes y hasta 24 horas</string>
    <string name="aviso_verifica_datos_agendamiento">Verifica los datos del Agendamiento</string>
    <string name="aviso_verifica_datos_del_agendamiento">Verifica los datos del Agendamiento</string>
    <string name="aviso_selecciona_motivo_agendamiento">Selecciona el motivo del Agendamiento</string>
    <string name="block">Barrio</string>
    <string name="btn_new_address">Agregar a mis direcciones</string>
    <string-array name="street_type">
        <item>Calle</item>
        <item>Carrera</item>
        <item>Transversal</item>
        <item>Avenida</item>
        <item>Diagonal</item>
    </string-array>
    <string name="button_app_version">Actualizar ahora</string>
    <string name="calificar">service/score</string>
    <string name="cancel">cancelar</string>
    <string name="cancel_schedule">schedule/cancel</string>
    <string name="cancel_service">v2/user/%1$s/cancelservice</string>
    <string name="cancel_service_system">service/systemcancel</string>
    <string name="checkstatuservice">service/status</string>
    <string name="city">Ciudad</string>
    <string name="close_session_error">Hubo un error al cerrar sesión</string>
    <string name="code_pass">user/pwd/confirm</string>
    <string name="codigo_de_confirmaci_n">Codigo de confirmación</string>
    <string name="confirm_cancel">¿Estás seguro de cancelar el servicio?</string>
    <string name="confirmacion_seguro_cierra_sesion">¿Está seguro de cerrar la sesión?</string>
    <string name="deladdress">address/delete</string>
    <string name="digita_nueva_contrase_a">Digita nueva contraseña</string>
    <string name="digita_tu_direcci_n_de_correo">Digita tu correo electrónico</string>
    <string name="dir1">Ej:91b</string>
    <string name="dir2">Ej:65a</string>
    <string name="dir3">Ej:40</string>
    <string name="driver">driver/view</string>
    <string name="enable_gps">Por favor habilite su GPS.</string>
    <string name="enviando">Enviando...</string>
    <string name="enviando_calificacion">Enviando Calificacion...</string>
    <string name="error_cancel_service">Hubo un error al cancelar el servicio</string>
    <string name="error_load_address">Hubo un error al cargar las direcciones</string>
    <string name="error_load_driver">Error al cargar los datos del conductor</string>
    <string name="error_load_services">Hubo un error al cargar el historial</string>
    <string name="error_login">Nombre de usuario o password incorrectos</string>
    <string name="error_net">Hubo un error con su conexión , ¡Intente de nuevo!</string>
    <string name="network_connectivity_message">Verificando...</string>
    <string name="error_no_driver">En el momento no hay conductores disponibles</string>
    <string name="error_no_procc">No se pudo procesar la solicitud\n intentelo de nuevo</string>
    <string name="error_position">No fue posible obtener su ubicación, espere unos segundos e intente otra vez!</string>
    <string name="error_q_service">Hubo un error al calificar el servicio</string>
    <string name="error_speed">Su conexión a internet presenta problemas de velocidad!</string>
    <string name="finish_schedule">schedule/finish</string>
    <string name="getaddress">address/byuser</string>
    <string name="getdriverinfo">Hubo un error al cargar los datos del conductor</string>
    <string name="getlatlngaddress">http://maps.googleapis.com/maps/api/geocode/json?</string>
    <string name="guion">-</string>
    <string name="has">#</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_address">Dirección inicial…</string>
    <string name="hint_apto">Observaciones…</string>
    <string name="hint_barrio">Usaquén</string>
    <string name="hint_destino">Dirección destino…</string>
    <string name="hint_dir_2">6b</string>
    <string name="hint_dir_3">8</string>
    <string name="hint_dir_uno">70</string>
    <string name="hint_ejemplo_direccion">Ej: Calle 142 # 55-23 apto 402</string>
    <string name="hint_ejemplo_fuera_bogota">"Ej: Girardot , Cundinamarca "</string>
    <string name="important">Importante</string>
    <string name="informacion_importante">Información importante</string>
    <string name="is_logued">user/islogued</string>
    <string name="last_15_minutes">¡Faltando 15 minutos le informaremos las placas del vehículo que estará en la hora solicitada!</string>
    <string name="login">user/login</string>
    <string name="logout">user/logout</string>
    <string name="lun">Lun</string>
    <string name="marca">marca</string>
    <string name="marca_">"Marca: "</string>
    <string name="mensaje_cerrando_sesion">Cerrando sesión...</string>
    <string name="mensaje_erro_cerrando_sesion">Hubo un error al cerrar sesión</string>
    <string name="mensaje_servicio_tomado">El servicio ha sido tomado en otro dispositivo diferente con su usuario. Se deshabilitará esté dispositivo</string>
    <string name="mensaje_session_cerrada_con_exito">Sesión cerrada con éxito</string>
    <string name="message_app_version">Hay una nueva versión de Taxisya disponible; esta versión ya no es compatible. Para continuar debes actualizar la aplicación</string>
    <string name="myanged">schedule/user</string>
    <string name="new_address_hint">Dirección</string>
    <string name="new_detail_hint">¿Deseas agregar un comentario?</string>
    <string name="new_name_hint">Nombre</string>
    <string name="no_update_services">Actualice Google Play Services</string>
    <string name="noaddres">¡No tienes direcciones!</string>
    <string name="nocancel">¡No se ha cancelado el servicio!</string>
    <string name="nombre">nombre</string>
    <string name="obs">Ej:Apt 201/Casa</string>
    <string name="olvidate_la_contrase_a_">¿Olvidaste la contraseña?</string>
    <string name="perfil_contrase_a">Cambiar contraseña</string>
    <string name="placa">placa</string>
    <string name="placa_">"Placa: "</string>
    <string name="reclamo">complain/create</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="registry">user/register</string>
    <string name="registry_error">Hubo un error al procesar el registro</string>
    <string name="request_service">v2/user/%1$s/requestservice</string>
    <string name="request_service_address">v2/user/%1$s/requestservice_address</string>
    <string name="resetpass">forgotten</string>
    <string name="retry">reintentar</string>
    <string name="sd">Buscando Dirección...</string>
    <string name="pasangers"># Pasajeros</string>
    <string name="vale">Vale</string>
    <string name="google_maps_api_key">AIzaSyDCIcxZCSAhO2C1r5MO7MP_8XbUs7AE6oo</string>
    <string name="se_ha_enviado_a_tu_correo_electronico_un_codigo_de_confirmaci_n">Se ha enviado a tu correo electrónico un codigo de confirmacion</string>
    <string name="selecciona">Selecciona</string>
    <string name="services_user">service/user</string>
    <string name="servicio_agendado_correctamente">Servicio agendado correctamente</string>
    <string name="servicio_cancelado">El servicio fue cancelado</string>
    <string name="servicio_cancelado_conductor">El servicio fue cancelado por el conductor</string>
    <string name="servicio_cancelado_operadora">El servicio fue cancelado por la operadora</string>
    <string name="servicio_cancelado_sistema">El servicio fue cancelado por el sistema</string>
    <string name="set_agendado_aeropuerto">Aeropuerto</string>
    <string name="set_agendado_fuera_bogota">Fuera de la ciudad</string>
    <string name="set_agendado_mensajeria">Mensajería</string>
    <string name="set_agendado_servicio_horas">Servicio por horas</string>
    <string name="street_prompt">Seleccione</string>
    <string name="text_aceptar">Aceptar</string>
    <string name="text_actualizando">Actualizando...</string>
    <string name="text_agendamientos">Agendamientos</string>
    <string name="text_agendar_servicio">Agendar servicio</string>
    <string name="text_agregar">Agregar</string>
    <string name="text_autenticando">Autenticando...</string>
    <string name="text_btn_calificar">Calificar servicio</string>
    <string name="text_btn_cancelar">Cancelar</string>
    <string name="text_btn_ingresar">Ingresar</string>
    <string name="text_btn_no">No</string>
    <string name="text_btn_si">Si</string>
    <string name="text_btn_ver_mapa">Ver mapa</string>
    <string name="text_campos_imcompletos">Campos incompletos</string>
    <string name="text_cancelar">Cancelar</string>
    <string name="text_cancelar1">Cancelar</string>
    <string name="text_cargando_historial">Cargando Historial...</string>
    <string name="text_ciudad_1">Dirección</string>
    <string name="text_ciudad_destino">Destino</string>
    <string name="text_contrasena_restablecida">Contraseña restablecida con éxito</string>
    <string name="text_dia_dom">Dom</string>
    <string name="text_dia_jue">Jue</string>
    <string name="text_dia_lun">Lun</string>
    <string name="text_dia_mar">Mar</string>
    <string name="text_dia_mie">Mie</string>
    <string name="text_dia_sab">Sab</string>
    <string name="text_dia_vie">Vie</string>
    <string name="text_en_espera">En espera</string>
    <string name="text_enviando_informacion">Enviando Información...</string>
    <string name="text_escribe_email">Escriba su dirección de correo</string>
    <string name="text_error_cargando_historial">Hubo un error al cargar el historial</string>
    <string name="text_mas_de_2700">Más de 2700 unidades activas</string>
    <string name="text_mes_abr">abr</string>
    <string name="text_mes_ago">ago</string>
    <string name="text_mes_dic">dic</string>
    <string name="text_mes_ene">ene</string>
    <string name="text_mes_feb">feb</string>
    <string name="text_mes_jul">jul</string>
    <string name="text_mes_jun">jun</string>
    <string name="text_mes_mar">mar</string>
    <string name="text_mes_may">may</string>
    <string name="textimageview">link</string>
    <string name="texto_actualizar_datos">Actualizar datos</string>
    <string name="texto_cerrar_sesion">Cerrar sesión</string>
    <string name="texto_finalizado">Finalizado</string>
    <string name="texto_registrarme">Registrarme</string>
    <string name="texto_registro_1">Ingresa estos 4 datos</string>
    <string name="texto_registro_2">solamente una vez</string>
    <string name="texto_registro_3">Para tu seguridad y la del conductor</string>
    <string name="texto_tus_datos">Tus Datos</string>
    <string name="texto_ya_tengo_mi_cuenta">Ya tengo mi cuenta</string>
    <string name="tu_contrase_a">Contraseña</string>
    <string name="tu_e_mail_correo_electr_nico_">Correo electrónico</string>
    <string name="tu_n_mero_celular">Celular</string>
    <string name="tu_nombre_y_apellido">Nombre y apellido</string>
</resources>