<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp" >

        <ImageView
            android:id="@+id/banner_arriba"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logoprueba" />

        <ImageView
            android:id="@+id/btn_volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/btn_back"
            android:tag="3" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        android:orientation="vertical" >
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:background="@drawable/border_bottom_g"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom_g"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="10sp"
            android:paddingRight="10sp" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="@string/recuperar_contrase_a"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ed1920" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:hint="@string/digita_tu_direcci_n_de_correo"
                android:inputType="textEmailAddress" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="50dp"
                android:visibility="gone"
                android:hint="@string/codigo_de_confirmaci_n"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:inputType="textPassword"
                android:hint="@string/digita_nueva_contrase_a"/>

            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@color/text_blue"
                android:text="@string/texto_finalizado"
                android:visibility="visible"
                android:tag="11"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/msg_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/se_ha_enviado_a_tu_correo_electronico_un_codigo_de_confirmaci_n"
                android:textAlignment="gravity"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#f05525"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>